# ProxyTool

./: .dockerignore  .gitignore  Dockerfile  README.md  enable-docker-ipv6.sh  main.py  pyproject.toml
Controller/AuthController/: GetUserController.py  SingUpController.py  __init__.py  deleteUserController.py
Controller/ChatControllers/: GetResumeDetailsController.py  InvokeChatController.py  ResumeUploadController.py  __init__.py
Database/: core.py
Models/: ResponseModel.py  UploadModel.py  UserModel.py
Schema/: ChatMemory.py  User.py
Services/AuthUserService/: DeleteUser.py  GetUser.py  SignUpUser.py  __init__.py
Services/ChatService/: GetResumeDetails.py  InvokeChatService.py  ResumeUploadService.py
WorkFlow/: ChatModel.py  chain.py
WorkFlow/Prompts/: PromptLibrary.py
utils/: EmailExists.py  TranscribeAudio.py  exceptions.py  llm.py  logger.py
